[package]
name = "locate-path"
version = "0.1.0"
edition = "2021"
description = "resolve first existing path from candidate list"
license = "MIT"
repository = "https://github.com/hey-jj/locate-path"
readme = "README.md"

[dependencies]

[dev-dependencies]
# Builds an isolated temporary directory tree per test so the suite never
# touches the working copy and cleans up on its own.
tempfile = "3"
