[package]
name = "locate-path"
version = "0.1.0"
edition = "2021"
description = "Find the first existing path from an ordered list of candidates."
license = "MIT"
repository = "https://github.com/hey-jj/locate-path"
documentation = "https://docs.rs/locate-path"
readme = "README.md"
keywords = ["path", "filesystem", "locate", "exists", "find"]
categories = ["filesystem"]

[dependencies]

[dev-dependencies]
# Builds an isolated temporary directory tree per test so the suite never
# touches the working copy and cleans up on its own.
tempfile = "3"
